--- a/fe/package.json
+++ b/fe/package.json
@@ -22,6 +22,7 @@
     "react-hot-toast": "^2.6.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.6",
+    "recharts": "^3.5.0",
     "tailwindcss": "^4.1.17",
     "use-debounce": "^10.0.6"
   },
