--- a/zalominiapp/package.json
+++ b/zalominiapp/package.json
@@ -20,9 +20,12 @@
     "deploy": "zmp deploy"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "jotai": "^2.12.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.10.1",
+    "recoil": "^0.7.7",
     "zmp-sdk": "latest",
     "zmp-ui": "latest"
   },
@@ -36,6 +39,7 @@
     "sass": "^1.76.0",
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.13",
+    "zmp-cli": "^4.0.1",
     "zmp-vite-plugin": "latest"
   }
 }
