--- a/zalominiapp/package.json
+++ b/zalominiapp/package.json
@@ -22,8 +22,10 @@
   "dependencies": {
     "axios": "^1.13.2",
     "jotai": "^2.12.1",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.10.1",
     "recoil": "^0.7.7",
     "zmp-sdk": "latest",
